account-data/Reishi-Narisada/ap-northeast-2/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-0171d26a",
                    "NetworkAclId": "acl-0c5b9d64",
                    "SubnetId": "subnet-131c285e"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-0271d269",
                    "NetworkAclId": "acl-0c5b9d64",
                    "SubnetId": "subnet-6001f908"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-3e7fea53",
                    "NetworkAclId": "acl-0c5b9d64",
                    "SubnetId": "subnet-7b788800"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-0c5b9d64",
            "OwnerId": "416817624313",
            "Tags": [],
            "VpcId": "vpc-ce24c9a6"
        }
    ]
}
